--- a/src/app/auth/login/login.html
+++ b/src/app/auth/login/login.html
@@ -1,12 +1,12 @@
-<p>login works!</p>
+
 <div class="wrapper_login">
     <form [formGroup]="credenciales()" autocomplete="off" >
         <img src="img_Doc/IconoDOC.svg" style="width: 258.96px; height: 260.37px;" alt="">
         <div class="input_box">
-            <input type="text" formControlName="email" placeholder="Usuario" (click)="MensajeError()">
+            <input type="text" formControlName="email" placeholder="Usuario" (click)="MensajeError()" (change)="MensajeError()">
         </div>
         <div class="input_box">
-            <input type="password" formControlName="pass" placeholder="Contraseña" (click)="MensajeError()">
+            <input type="password" formControlName="pass" placeholder="Contraseña" (click)="MensajeError()" (change)="MensajeError()">
         </div>
         <button type="submit" (click)="login()" class="btn_login">Entrar</button>
         <div class="errorPass">
@@ -17,4 +17,3 @@
 <div class="version">
     <span>VER.1.0</span>
 </div>
-<button >click {{prueba}}</button>
