--- a/src/app/shared/sidebar/sidebar.html
+++ b/src/app/shared/sidebar/sidebar.html
@@ -6,7 +6,7 @@
                 <li class="nav-item-inicio">
                     <div class="inicio" >
                         <img src="img_Doc/inicio.png" alt="link-side">
-                        <a [routerLink]="['/main/Dashboard']"  class="nav-item-inicio dropdown-title-inicio" (click)="linkActivo($event)"><p  routerLinkActive="link-Active">Inicio</p></a>
+                        <a [routerLink]="['/Dashboard']"  class="nav-item-inicio dropdown-title-inicio" (click)="linkActivo($event)"><p  routerLinkActive="link-Active">Inicio</p></a>
                     </div>
                 </li>
             </ul>
@@ -19,7 +19,7 @@
                     <ul class="dropdown-menu-toggle"#toggle1>
                         <li class="nav-item">
                             <div class="element-a">
-                                    <a [routerLink]="['/main/once/clientes']" class="nav-item dropdown-link" (click)="desactivarLink(2)"><p routerLinkActive="link-Active">Clientes</p></a>
+                                    <a [routerLink]="['/once/clientes']" class="nav-item dropdown-link" (click)="desactivarLink(2)"><p routerLinkActive="link-Active">Clientes</p></a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -75,7 +75,7 @@
                     <ul class="dropdown-menu-toggle" #toggle1>
                         <li class="nav-item">
                             <div class="element-a">
-                                <a [routerLink]="['/main/once/prueba']" class="nav-item dropdown-link" (click)="desactivarLink(3)"><p routerLinkActive="link-Active">prueba</p> </a>
+                                <a [routerLink]="['/once/prueba']" class="nav-item dropdown-link" (click)="desactivarLink(3)"><p routerLinkActive="link-Active">prueba</p> </a>
                             </div>
                         </li>
                     </ul>
