--- a/src/app/shared/layout/layout.html
+++ b/src/app/shared/layout/layout.html
@@ -2,6 +2,9 @@
     <!-- <div class="component-layout"> -->
         <div class="sidebar-component">
             <app-sidebar/>
+            <div class="logout">
+                <button (click)="LogOut()"><img src="img_Doc/Icono_salir.png" alt=""></button>
+            </div>
         </div>
         <div class="all-container">
             <router-outlet/>
