--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
+@font-face{
+    font-family: 'SuperMario';
+    src: url('../public/fonts/SuperMario256.ttf') format('truetype');
+}
+
 /* You can add global styles to this file, and also import other style files */
 :root{
     /* font-weight tipografias y paleta de colores */
